feat: manage session directories explicitly
